<resources>
    <string name="app_name">BubbleApp</string>
    <string name="title_activity_register_form">RegisterForm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="BaseUrl">http://10.0.2.2:7135/api/</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fullName">fullName</string>
    <string name="register">register</string>
    <string name="nickname">nickName</string>
    <string name="login_register_text">Register</string>
    <string name="settings_design_label">Graphics</string>
    <string name="settings_network_label">Network</string>
    <string name="settings_switch_label">Dark mode</string>
    <string name="settings_server_label">server url</string>
    <string name="settings_app_bf_token_label">FireBase token</string>
    <string name="settings_title">Settings</string>
    <string name="settings_appy_btn">Apply</string>
    <string name="alert_okay_btn">Apply</string>
    <string name="alert_cancel_btn">Cancel</string>
</resources>