<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="20dp"
    android:backgroundTint="?attr/backgroundBody">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/settings_title"
        android:textColor="?attr/txtTitle2"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="31dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/settings_title"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_design_label"
            android:textSize="18dp"
            android:textColor="?attr/txtSubtitle2"/>

        <Switch
            android:id="@+id/settings_darkmode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbarSize="8dp"
            android:text="@string/settings_switch_label"
            android:textSize="20dp"
            android:textColor="?attr/mainText"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/settings_network_label"
            android:textSize="18dp"
            android:textColor="?attr/txtSubtitle2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0"
                android:text="@string/settings_server_label"
                android:textColor="?attr/txtSubtitle2"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/settings_server_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="number"
                android:textSize="15dp" />

        </LinearLayout>

        <Button
            android:id="@+id/settings_apply_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?attr/backgroundButton"
            android:textColor="?attr/txtTitle1"
            android:text="@string/settings_appy_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>