<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterForm">

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/nickName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="23dp"
        android:hint="@string/fullName" />

    <EditText
        android:id="@+id/nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        tools:layout_editor_absoluteX="0dp"
        android:hint="@string/nickname" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/nickName"
        tools:layout_editor_absoluteX="25dp"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/validatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints="validatePassword" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/validatePassword"
        tools:layout_editor_absoluteX="152dp" />
</androidx.constraintlayout.widget.ConstraintLayout>