<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:padding="20dp"
    android:background="?attr/backgroundBody">

    <TextView
        android:id="@+id/alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/transparent"
        android:text=""
        android:textColor="?attr/txtTitle2"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="31dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/alert_title"
        tools:layout_editor_absoluteX="20dp">


        <TextView
            android:id="@+id/alert_input_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:text="@string/settings_app_bf_token_label"
            android:textColor="?attr/mainText"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/alert_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="number"
            android:textColor="?attr/txtInput"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/alert_input_label2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0"
            android:text="@string/settings_app_bf_token_label"
            android:textColor="?attr/mainText"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/alert_input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="number"
            android:textColor="?attr/txtInput"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/alert_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/backgroundButton"
                android:text="@string/alert_cancel_btn"
                android:textColor="?attr/txtTitle1" />

            <Button
                android:id="@+id/alert_okay_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:backgroundTint="?attr/backgroundButton"
                android:text="@string/alert_okay_btn"
                android:textColor="?attr/txtTitle1" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>